--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 #RABBITMQ CONFIG
 queue.name=messagequeue
-fanout.exchange=messagequeue-exchange
+exchange.name=messagequeue-exchange
 routing.key=routingkey
-fanout.exchange.dlx=messagequeue-exchange-dlx
+queue.name.dlx=messagequeue-dlx
+exchange.name.dlx=messagequeue-exchange-dlx
 routing.key.dlx=routingkey-dlx
 spring.rabbitmq.host: localhost
 spring.rabbitmq.port: 5672
